fix: align pay-and-feed block

--- a/online-zoo/pages/landing/landing.css
+++ b/online-zoo/pages/landing/landing.css
@@ -555,16 +555,17 @@ header {
 }
 .pay-and-feed-wrapper {
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   background: #fcfcfc;
   width: 100%;
 }
 .pay-and-feed {
-  width: 1710px;
+  width: 1560px;
   height: 1300px;
   display: flex;
   flex-direction: column;
+  margin-left: 93px;
 }
 .pay-and-feed__content-wrapper {
   display: flex;
@@ -603,15 +604,14 @@ header {
   align-self: center;
   margin-top: 100px;
   position: relative;
-  right: 120px;
+  right: 183px;
 }
 .pay-and-feed__content_align-left {
   align-self: flex-start;
-  margin-left: 180px;
 }
 .pay-and-feed__content_align-right {
   align-self: flex-end;
-  margin: 60px 60px 51px 0;
+  margin: 60px 0 51px 0;
 }
 .pay-and-feed__h2 {
   margin-bottom: 30px;
